Fixes overflow-x due to hero bg.

--- a/_sass/_custom-layout.scss
+++ b/_sass/_custom-layout.scss
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+}
 .no-bottom-margin {
     margin-bottom: 0;
 }
